# azure-atlas

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  mkdocs.yml  package.json  pnpm-lock.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  demo.yml  docs.yml  pages.yml
apps/api/: .env.example  Dockerfile  entrypoint.sh  pyproject.toml
apps/api/app/: auth.py  config.py  db.py  main.py  migrate.py  worker.py
apps/api/app/models/: __init__.py  curation.py  domains.py  events.py  graph.py  journeys.py  nodes.py  search.py
apps/api/app/pipeline/: jobs.py
apps/api/app/routers/: curation.py  domains.py  events.py  graph.py  journeys.py  nodes.py  search.py
apps/api/migrations/: 001_initial.sql  002_curation_audit.sql  002_seed_network.sql  003_ontology_expansion.sql  README.md
apps/api/tests/: conftest.py  test_auth.py  test_endpoints.py  test_health.py
apps/web/: .env.demo  Dockerfile  Dockerfile.dev  eslint.config.js  index.html  nginx.conf  package.json  pnpm-lock.yaml  vite.config.ts
apps/web/src/: App.tsx  cytoscape-fcose.d.ts  index.css  main.tsx
apps/web/src/lib/: api.ts  (+2 more)
docs/: contributing.md  index.md
docs/architecture/: api.md  database.md  frontend.md  overview.md
docs/development/: ci-cd.md  setup.md  testing.md
docs/getting-started/: configuration.md  prerequisites.md  quickstart.md
docs/ontology/: domains.md  overview.md  seed-data.md
(+30 files in other folders)
